// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressIndicator/> Snapshot renders without crashing using mount 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 25px;
  border: 4px solid;
  min-width: 180px;
  height: 30px;
  padding: 3.5px;
  margin-right: 0.5em;
}

.c2 {
  border-radius: 25px;
  min-width: 10%;
}

@media (min-width:576px) {
  .c1 {
    min-width: 350px;
  }
}

<ProgressIndicator>
  <styled.div>
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.div
            percentage={10}
          >
            <div
              className="c2"
            />
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</ProgressIndicator>
`;

exports[`<ProgressIndicator/> Snapshot renders without crashing using render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 25px;
  border: 4px solid;
  min-width: 180px;
  height: 30px;
  padding: 3.5px;
  margin-right: 0.5em;
}

.c2 {
  border-radius: 25px;
  min-width: 10%;
}

@media (min-width:576px) {
  .c1 {
    min-width: 350px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
</div>
`;

exports[`<ProgressIndicator/> Snapshot renders without crashing using shallow 1`] = `
<styled.div>
  <styled.div>
    <styled.div
      percentage={10}
    />
  </styled.div>
</styled.div>
`;
